--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "examples:01_typescript": "DIR=01_typescript EXT=tsx webpack serve",
     "examples:02_props": "DIR=02_props EXT=tsx webpack serve",
     "examples:03_async": "DIR=03_async EXT=tsx webpack serve",
-    "examples:04_todos": "DIR=04_todos EXT=tsx webpack serve"
+    "examples:04_todos": "DIR=04_todos EXT=tsx webpack serve",
+    "examples:05_setvalue": "DIR=05_setvalue EXT=tsx webpack serve"
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -64,7 +65,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "create-react-signals": "https://pkg.csb.dev/dai-shi/create-react-signals/commit/c8c6d651/create-react-signals",
+    "create-react-signals": "https://pkg.csb.dev/dai-shi/create-react-signals/commit/5eaa12e0/create-react-signals",
     "ramda": "^0.28.0"
   },
   "devDependencies": {
