--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "examples:01_typescript": "DIR=01_typescript EXT=tsx webpack serve",
     "examples:02_props": "DIR=02_props EXT=tsx webpack serve",
     "examples:03_async": "DIR=03_async EXT=tsx webpack serve",
-    "examples:04_todos": "DIR=04_todos EXT=tsx webpack serve"
+    "examples:04_todos": "DIR=04_todos EXT=tsx webpack serve",
+    "examples:05_setvalue": "DIR=05_setvalue EXT=tsx webpack serve"
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -63,9 +64,13 @@
     "signal"
   ],
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "create-react-signals": "0.1.0",
+    "ramda": "^0.28.0"
+  },
   "devDependencies": {
     "@types/jest": "^29.2.4",
+    "@types/ramda": "^0.28.20",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
@@ -94,7 +99,6 @@
     "zustand": "^4.2.0"
   },
   "peerDependencies": {
-    "react": ">=17.0.0",
-    "zustand": ">=4.0.0"
+    "react": ">=17.0.0"
   }
 }
