--- a/package.json
+++ b/package.json
@@ -65,12 +65,10 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "create-react-signals": "0.1.0",
-    "ramda": "^0.28.0"
+    "create-react-signals": "0.1.0"
   },
   "devDependencies": {
     "@types/jest": "^29.2.5",
-    "@types/ramda": "^0.28.20",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
