--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "create-react-signals": "0.2.0"
+    "create-react-signals": "https://pkg.csb.dev/dai-shi/create-react-signals/commit/00b7b5d2/create-react-signals"
   },
   "devDependencies": {
     "@types/jest": "^29.2.5",
