use wip package

--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "create-react-signals": "0.4.1"
+    "create-react-signals": "https://pkg.csb.dev/dai-shi/create-react-signals/commit/3664f7f2/create-react-signals"
   },
   "devDependencies": {
     "@react-three/drei": "^9.51.24",
