--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@react-three/drei": "^9.54.2",
     "@react-three/fiber": "^8.10.1",
     "@types/jest": "^29.2.6",
+    "@types/node": "^18.14.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/three": "^0.148.1",
