migrate to pnpm and simplify configs (#10)
* migrate to pnpm and simplify configs

* skipLibCheck

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,22 @@
 {
   "compilerOptions": {
     "strict": true,
-    "target": "es5",
-    "esModuleInterop": true,
+    "target": "esnext",
     "downlevelIteration": true,
+    "esModuleInterop": true,
     "module": "es2015",
     "moduleResolution": "node",
-    "jsx": "react-jsx",
     "allowJs": true,
-    "skipLibCheck": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
-    "sourceMap": true,
+    "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
       "zustand-signal": ["./src"],
       "zustand-signal/jsx-runtime": ["./src/jsx-runtime"]
     },
-    "outDir": "./dist"
+    "skipLibCheck": true
   }
 }
