--- a/examples/06_r3f/package.json
+++ b/examples/06_r3f/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "zustand-signal-example",
-  "version": "0.1.0",
+  "name": "example",
+  "version": "0.0.0",
   "private": true,
+  "type": "commonjs",
   "dependencies": {
     "@react-three/fiber": "latest",
     "@react-three/drei": "latest",
@@ -20,11 +21,5 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  }
 }
