--- a/package.json
+++ b/package.json
@@ -2,63 +2,71 @@
   "name": "zustand-signal",
   "description": "Another React binding for Zustand",
   "version": "0.5.3",
+  "type": "module",
   "author": "Daishi Kato",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dai-shi/zustand-signal.git"
+    "url": "https://github.com/zustandjs/zustand-signal.git"
   },
   "source": "./src/index.ts",
-  "main": "./dist/index.umd.js",
-  "module": "./dist/index.modern.js",
-  "types": "./dist/src/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "types": "./dist/src/index.d.ts",
-      "module": "./dist/index.modern.js",
-      "import": "./dist/index.modern.mjs",
-      "default": "./dist/index.umd.js"
+      "require": {
+        "types": "./dist/cjs/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      },
+      "default": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
     },
     "./jsx-runtime": {
-      "types": "./dist/src/jsx-runtime.d.ts",
-      "module": "./dist/jsx-runtime/index.modern.js",
-      "import": "./dist/jsx-runtime/index.modern.mjs",
-      "default": "./dist/jsx-runtime/index.umd.js"
+      "require": {
+        "types": "./dist/cjs/jsx-runtime.d.ts",
+        "default": "./dist/cjs/jsx-runtime.js"
+      },
+      "default": {
+        "types": "./dist/jsx-runtime.d.ts",
+        "default": "./dist/jsx-runtime.js"
+      }
     },
     "./jsx-dev-runtime": {
-      "types": "./dist/src/jsx-runtime.d.ts",
-      "module": "./dist/jsx-runtime/index.modern.js",
-      "import": "./dist/jsx-runtime/index.modern.mjs",
-      "default": "./dist/jsx-runtime/index.umd.js"
+      "require": {
+        "types": "./dist/cjs/jsx-dev-runtime.d.ts",
+        "default": "./dist/cjs/jsx-dev-runtime.js"
+      },
+      "default": {
+        "types": "./dist/jsx-dev-runtime.d.ts",
+        "default": "./dist/jsx-dev-runtime.js"
+      }
     }
   },
   "sideEffects": false,
   "files": [
     "src",
-    "dist",
-    "jsx-runtime.d.ts"
+    "dist"
   ],
+  "packageManager": "pnpm@8.15.0",
   "scripts": {
-    "compile": "run-s compile:index compile:jsx-runtime",
-    "compile:index": "microbundle build -f modern,umd --globals react=React",
-    "postcompile:index": "cp dist/index.modern.mjs dist/index.modern.js && cp dist/index.modern.mjs.map dist/index.modern.js.map",
-    "compile:jsx-runtime": "microbundle build src/jsx-runtime.ts -o dist/jsx-runtime/index.js --external zustand-signal -f modern,umd --globals react=React",
-    "postcompile:jsx-runtime": "cp dist/jsx-runtime/index.modern.mjs dist/jsx-runtime/index.modern.js && cp dist/jsx-runtime/index.modern.mjs.map dist/jsx-runtime/index.modern.js.map && cp dist/src/jsx-runtime.d.ts jsx-runtime.d.ts",
-    "test": "run-s eslint tsc-test jest",
-    "eslint": "eslint --ext .js,.ts,.tsx .",
-    "jest": "jest",
-    "tsc-test": "tsc --project . --noEmit",
-    "examples:01_typescript": "DIR=01_typescript EXT=tsx webpack serve",
-    "examples:02_props": "DIR=02_props EXT=tsx webpack serve",
-    "examples:03_async": "DIR=03_async EXT=tsx webpack serve",
-    "examples:04_todos": "DIR=04_todos EXT=tsx webpack serve",
-    "examples:05_setvalue": "DIR=05_setvalue EXT=tsx webpack serve",
-    "examples:06_r3f": "DIR=06_r3f EXT=tsx webpack serve",
-    "examples:07_signal": "DIR=07_signal EXT=tsx webpack serve"
-  },
-  "jest": {
-    "testEnvironment": "jsdom",
-    "preset": "ts-jest/presets/js-with-ts"
+    "compile": "rm -rf dist && pnpm run '/^compile:.*/'",
+    "compile:esm": "tsc -p tsconfig.esm.json",
+    "compile:cjs": "tsc -p tsconfig.cjs.json && echo '{\"type\":\"commonjs\"}' > dist/cjs/package.json",
+    "test": "pnpm run '/^test:.*/'",
+    "test:format": "prettier -c .",
+    "test:lint": "eslint .",
+    "test:types": "tsc -p . --noEmit",
+    "test:types:examples": "tsc -p examples --noEmit",
+    "test:spec": "vitest run",
+    "examples:01_counter": "DIR=01_counter vite",
+    "examples:02_props": "DIR=02_props vite",
+    "examples:03_async": "DIR=03_async vite",
+    "examples:04_todos": "DIR=04_todos vite",
+    "examples:05_setvalue": "DIR=05_setvalue vite",
+    "examples:06_r3f": "DIR=06_r3f vite",
+    "examples:07_signal": "DIR=07_signal vite"
   },
   "keywords": [
     "zustand",
@@ -66,44 +74,43 @@
     "signal"
   ],
   "license": "MIT",
+  "prettier": {
+    "singleQuote": true
+  },
   "dependencies": {
-    "create-react-signals": "0.7.0"
+    "create-react-signals": "^0.8.0"
   },
   "devDependencies": {
-    "@react-three/drei": "^9.56.27",
-    "@react-three/fiber": "^8.11.5",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.14.1",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/three": "^0.149.0",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
-    "eslint": "^8.34.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.4.3",
-    "microbundle": "^0.15.1",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "three": "^0.150.0",
-    "ts-jest": "^29.0.5",
-    "ts-loader": "^9.4.2",
-    "typescript": "^4.9.5",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1",
-    "zustand": "^4.3.3"
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.2",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.4",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.163.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.1",
+    "happy-dom": "^14.7.1",
+    "prettier": "^3.2.5",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "three": "^0.164.1",
+    "ts-expect": "^1.3.0",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.10",
+    "vitest": "^1.5.2",
+    "zustand": "^4.5.2"
   },
   "peerDependencies": {
-    "react": ">=17.0.0"
+    "react": ">=18.0.0"
   }
 }
