--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,21 @@
 {
   "compilerOptions": {
     "strict": true,
-    "target": "esnext",
+    "target": "es2018",
     "downlevelIteration": true,
     "esModuleInterop": true,
-    "module": "es2015",
-    "moduleResolution": "node",
+    "module": "nodenext",
+    "skipLibCheck": true,
     "allowJs": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "verbatimModuleSyntax": true,
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "zustand-signal": ["./src"],
-      "zustand-signal/jsx-runtime": ["./src/jsx-runtime"]
-    },
-    "skipLibCheck": true
-  }
+      "zustand-signal": ["./src/index.js"],
+      "zustand-signal/jsx-runtime": ["./src/jsx-runtime.js"]
+    }
+  },
+  "exclude": ["dist", "examples"]
 }
