--- a/package.json
+++ b/package.json
@@ -108,7 +108,8 @@
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
     "vitest": "^1.5.2",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "zustand-signal": "link:."
   },
   "peerDependencies": {
     "react": ">=18.0.0"
