--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,8 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "zustand-signal": ["./src/index.js"],
-      "zustand-signal/jsx-runtime": ["./src/jsx-runtime.js"]
+      "zustand-signal": ["./src/index.ts"],
+      "zustand-signal/jsx-runtime": ["./src/jsx-runtime.ts"]
     }
   },
   "exclude": ["dist", "examples"]
