--- a/package.json
+++ b/package.json
@@ -96,8 +96,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-compiler": "19.0.0-beta-decd7b8-20250118",
-    "eslint-plugin-react-hooks": "5.2.0-canary-de1eaa26-20250124",
+    "eslint-plugin-react-hooks": "6.0.0-rc.1",
     "happy-dom": "^16.7.2",
     "prettier": "^3.4.2",
     "react": "^19.0.0",
@@ -107,8 +106,8 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.21.0",
     "vite": "^6.0.11",
-    "vitest": "^3.0.4",
     "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.4",
     "zustand": "^5.0.3",
     "zustand-signal": "link:"
   },
